2011-06-06  Jason Merrill  <jason@redhat.com>

	PR c++/49134
	* tree.c (build_target_expr): Deal with ARM ABI tweaks.

2011-06-03  Jakub Jelinek  <jakub@redhat.com>

	PR c++/49276
	* mangle.c (write_nested_name): Use CP_DECL_CONTEXT instead of
	DECL_CONTEXT.

2011-05-30  Jakub Jelinek  <jakub@redhat.com>

	PR c++/49223
	* semantics.c (finish_omp_clauses): Call require_complete_type
	even for copyin/copyprivate clauses.  Only call
	cxx_omp_create_clause_info if inner_type is COMPLETE_TYPE_P.

2011-05-27  Jason Merrill  <jason@redhat.com>

	PR c++/47049
	* semantics.c (maybe_add_lambda_conv_op): Fix COMDAT sharing.
	* decl.c (start_preparsed_function): Don't call comdat_linkage for
	a template.

	PR c++/47277
	* parser.c (cp_parser_unqualified_id): Don't check
	constructor_name_p for enums.

	PR c++/48284
	* error.c (dump_expr) [COMPONENT_REF]: Use pp_cxx_dot
	with INDIRECT_REF of REFERENCE_TYPE.

	PR c++/48657
	PR c++/49176
	* decl.c (cp_finish_decl): Simplify template handling.

2011-05-26  Jason Merrill  <jason@redhat.com>

	PR c++/48424
	* decl.c (grokparms): Function parameter packs don't need to
	go at the end.
	* pt.c (type_unification_real): But they aren't deduced otherwise.

2011-05-25  Jason Merrill  <jason@redhat.com>

	PR c++/44994
	PR c++/49156
	* error.c (dump_template_bindings): Set processing_template_decl
	for a partial instantiation.

	PR c++/45401
	* decl.c (grokdeclarator): Don't change type when adding rvalue ref
	to another reference type.

2011-05-26  Fabien Chêne  <fabien@gcc.gnu.org>
	* init.c (diagnose_uninitialized_cst_or_ref_member_1): Use
	permerror instead of error, adjust the error count.

2011-05-25  Jason Merrill  <jason@redhat.com>

	PR c++/44311
	* decl.c (case_conversion): New.
	(finish_case_label): Use it.

	PR c++/45698
	* pt.c (dependent_template_arg_p): See through ARGUMENT_PACK_SELECT.

	PR c++/46005
	* decl.c (grokdeclarator): Complain about auto typedef.

	PR c++/46245